--- a/PRATICES/index.html
+++ b/PRATICES/index.html
@@ -32,7 +32,7 @@
     <p id="F.Patch"></p>
     <p id="Flame"></p>
   </center>
-  <script src="system.js"></script>
+  <script src="HealthBar.js"></script>
 </body>
 
 </html>
